--- a/p10_Identity_Management/.project
+++ b/p10_Identity_Management/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>p4_rmi_sql</name>
+	<name>p10_Identity_Management</name>
 	<comment></comment>
 	<projects>
 	</projects>
